fixed backdrop size so it doesnt get too big

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -127,7 +127,7 @@ p,h1,h2{
 
 .detailsBackDrop{
   max-width: 100%;
-  max-height: 100%;
+  max-height: 67vmin;
 }
 
 .detailedText{
